# CMakeTask

./: CMakeLists.txt  README.md
inc/: calculator.hpp
src/: main.cpp
src/dynamic/: add.cpp  divide.cpp  multiply.cpp  pthread_operation.cpp  subtract.cpp
src/runner/: Point7_dec.cpp  exec_add.cpp  exec_divide.cpp  exec_logical_xor.cpp  exec_multiply.cpp  exec_sub.cpp
src/static/: Point7_def.cpp  logical_and.cpp  logical_or.cpp  logical_terinary.cpp  logical_xor.cpp
